--- a/view/src/main/res/values/attrs.xml
+++ b/view/src/main/res/values/attrs.xml
@@ -29,6 +29,10 @@
 
     <declare-styleable name="TitleView">
         <attr name="group_color" format="reference|color" />
+        <attr name="back_text_padding_left" format="dimension|reference" />
+        <attr name="back_text_padding_right" format="dimension|reference" />
+        <attr name="back_text_padding_top" format="dimension|reference" />
+        <attr name="back_text_padding_bottom" format="dimension|reference" />
         <attr name="back_data" format="reference|string" />
         <attr name="back_left_drawable" format="reference" />
         <attr name="back_right_drawable" format="reference" />
@@ -36,7 +40,7 @@
         <attr name="back_bottom_drawable" format="reference" />
         <attr name="back_text_size" format="dimension" />
         <attr name="back_text_color" format="color|reference" />
-        <attr name="back_drawable_padding" format="dimension"/>
+        <attr name="back_drawable_padding" format="dimension" />
         <attr name="center_data" format="reference|string" />
         <attr name="center_text_size" format="dimension" />
         <attr name="center_text_color" format="color|reference" />
@@ -47,6 +51,10 @@
         <attr name="sure_bottom_drawable" format="reference" />
         <attr name="sure_text_size" format="dimension" />
         <attr name="sure_text_color" format="color|reference" />
-        <attr name="sure_drawable_padding" format="dimension"/>
+        <attr name="sure_text_padding_left" format="dimension|reference" />
+        <attr name="sure_text_padding_right" format="dimension|reference" />
+        <attr name="sure_text_padding_top" format="dimension|reference" />
+        <attr name="sure_text_padding_bottom" format="dimension|reference" />
+        <attr name="sure_drawable_padding" format="dimension" />
     </declare-styleable>
 </resources>
