第一次构建项目

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,12 @@
     <com.example.item.weight.TitleView
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:background="@color/colorAccent"
+        android:background="@color/colorPrimary"
         app:back_data="返回是丢"
         app:back_text_size="15sp"
         app:back_drawable_padding="5dp"
         app:back_left_drawable="@mipmap/ic_back"
-        app:back_text_color="@color/colorPrimary"
-        app:back_text_padding_left="15dp"
+        app:back_text_color="@color/colorAccent"
         app:back_text_padding_right="15dp"
         app:center_data="主页面"
         app:center_text_color="@android:color/black"
