--- a/view/src/main/res/values/attrs.xml
+++ b/view/src/main/res/values/attrs.xml
@@ -43,6 +43,26 @@
         <attr name="bottom_line_color" format="color|reference" />
         <!--Item选择器样式-->
         <attr name="selector_drawable" format="reference" />
+        <!--Item上划线高度-->
+        <attr name="top_line_height" format="dimension"/>
+        <!--Item下划线高度-->
+        <attr name="bottom_line_height" format="dimension"/>
+        <!--Item上线left外边距-->
+        <attr name="top_line_margin_left" format="dimension"/>
+        <!--Item上线top外边距-->
+        <attr name="top_line_margin_top" format="dimension"/>
+        <!--Item上线right外边距-->
+        <attr name="top_line_margin_right" format="dimension"/>
+        <!--Item上线bottom外边距-->
+        <attr name="top_line_margin_bottom" format="dimension"/>
+        <!--Item下线left外边距-->
+        <attr name="bottom_line_margin_left" format="dimension"/>
+        <!--Item下线top外边距-->
+        <attr name="bottom_line_margin_top" format="dimension"/>
+        <!--Item下线right外边距-->
+        <attr name="bottom_line_margin_right" format="dimension"/>
+        <!--Item下线bottom外边距-->
+        <attr name="bottom_line_margin_bottom" format="dimension"/>
     </declare-styleable>
 
 
